[package]
name = "deck_analyzer"
version = "0.1.0"
edition = "2021"
default-run = "main" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
thiserror = "^1.0"
itertools = "^0.11"
indicatif = "^0.17"
rand = "^0.8"